test-data/unit/check-in-exhaustive-checking.test
[case testInExhaustiveChecking]

[builtins fixtures/tuple.pyi]

# Import NoReturn for indicating functions that shouldn't return normally
from typing_extensions import NoReturn

# Import Enum to give names to specific values and link them to unique, constant values
from enum import Enum

# Import assert_never for ensuring all cases in an if-elif chain are handled
from typing_extensions import assert_never

class MyEnum(Enum):
    A = 1
    B = 2
    C = 3

def test_function(a: MyEnum) -> bool:
    if a == MyEnum.A:
        return True
    elif a in (MyEnum.B, MyEnum.C):
        return False
    assert_never(a)

test_function(MyEnum.A)
# E: Argument 1 to "assert_never" has incompatible type "Literal[MyEnum.B, MyEnum.C]"; expected "NoReturn"
